@@ -50,6 +50,14 @@ PKG_CHECK_MODULES(VINAGRE, \
 AC_SUBST(VINAGRE_CFLAGS)
 AC_SUBST(VINAGRE_LIBS)
 
+dnl ================================================================
+dnl GConf related settings
+dnl ================================================================
+
+AC_PATH_PROG(GCONFTOOL, gconftool-2)
+AM_GCONF_SOURCE_2
+
+
 #*******************************************************************************
 # Check for Avahi
 #*******************************************************************************
