@@ -18,16 +18,34 @@ MIMEFILES = vinagre-mime.xml.in
 mimedir = $(datadir)/mime/packages
 mime_DATA = vinagre-mime.xml
 
+schemasdir	 = $(GCONF_SCHEMA_FILE_DIR)
+schemas_in_files = vinagre.schemas.in
+schemas_DATA 	 = $(schemas_in_files:.schemas.in=.schemas)
+@INTLTOOL_SCHEMAS_RULE@
+
+if GCONF_SCHEMAS_INSTALL
+install-data-local:
+	if test -z "$(DESTDIR)" ; then \
+		for p in $(schemas_DATA) ; do \
+			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_builddir)/data/$$p ; \
+		done \
+	fi
+else
+install-data-local:
+endif
+
 CLEANFILES = \
 	$(desktop_DATA) \
-	$(mime_DATA)
+	$(mime_DATA) \
+	$(schemas_DATA)
 
 EXTRA_DIST = \
 	$(glade_DATA) \
 	$(man_MANS) \
 	$(ui_DATA) \
 	$(desktop_in_files) \
-	$(MIMEFILES)
+	$(MIMEFILES) \
+	$(schemas_in_files)
 
 UPDATE_MIME = \
         if [ -f $(DESTDIR)$(datadir)/mime/packages/freedesktop.org.xml ] ; then \
