@@ -1,0 +1,42 @@
+<gconfschemafile>
+ 	<schemalist>
+
+		<schema>
+			<key>/schemas/desktop/gnome/url-handlers/vnc/command</key>
+			<applyto>/desktop/gnome/url-handlers/vnc/command</applyto>
+			<owner>vinagre</owner>
+			<type>string</type>
+			<default>vinagre -u %s</default>
+			<locale name="C">
+				<short>The handler for "vnc://" URLs</short>
+				<long></long>
+			</locale>
+		</schema>
+
+        <schema>
+            <key>/schemas/desktop/gnome/url-handlers/vnc/needs_terminal</key>
+            <applyto>/desktop/gnome/url-handlers/vnc/needs_terminal</applyto>
+            <owner>vinagre</owner>
+            <type>bool</type>
+            <default>false</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
+
+
+        <schema>
+            <key>/schemas/desktop/gnome/url-handlers/vnc/enabled</key>
+            <applyto>/desktop/gnome/url-handlers/vnc/enabled</applyto>
+            <owner>vinagre</owner>
+            <type>bool</type>
+            <default>true</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
+
+	</schemalist>
+</gconfschemafile>
