@@ -3,6 +3,7 @@
 data/vinagre.desktop.in.in
 data/vinagre-file.desktop.in.in
 data/vinagre.glade
+data/vinagre.schemas.in
 data/vinagre-mime.xml.in
 data/vinagre-ui.xml
 src/vinagre-bookmarks.c
