@@ -1,3 +1,7 @@
+2008-01-30  Jonh Wendell <jwendell@gnome.org>
+
+	* Register vinagre in gconf as a handler to vnc:// protocol
+
 2008-01-28  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: post-release bump to 0.4.91
